--- a/webapp/user_profile/templates/user_profile/dashboard.html
+++ b/webapp/user_profile/templates/user_profile/dashboard.html
@@ -8,6 +8,12 @@
 
 {% block content %}
 <br/><br/><br/>
+<script type="text/javascript">
+function DisplayAlert(){
+  alert("Verification Failed Please Try Again")
+  console.log("hey")
+}
+</script>
 <style>
  /*.card {
       background: #fff;
@@ -17,38 +23,38 @@
       margin: 1rem;
       width: 90%;
     }*/
- 
+
     .card1:hover {
       box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.1), 0 10px 10px rgba(0, 0, 0, 0.22);
-  
+
     }
-  
+
     .bs-wizard {
       margin-top: 40px;
     }
-  
+
     /*Form Wizard*/
     .bs-wizard {
       border-bottom: solid 1px #e0e0e0;
       padding: 0 0 10px 0;
     }
-  
+
     .bs-wizard > .bs-wizard-step {
       padding: 0;
       position: relative;
     }
-  
+
     .bs-wizard > .bs-wizard-step .bs-wizard-stepnum {
       color: #595959;
       font-size: 16px;
       margin-bottom: 5px;
     }
-  
+
     .bs-wizard > .bs-wizard-step .bs-wizard-info {
       color: #999;
       font-size: 14px;
     }
-  
+
     .bs-wizard > .bs-wizard-step > .bs-wizard-dot {
       position: absolute;
       width: 30px;
@@ -61,7 +67,7 @@
       margin-left: -15px;
       border-radius: 50%;
     }
-  
+
     .bs-wizard > .bs-wizard-step > .bs-wizard-dot:after {
       content: ' ';
       width: 14px;
@@ -72,7 +78,7 @@
       top: 8px;
       left: 8px;
     }
-  
+
     .bs-wizard > .bs-wizard-step > .progress {
       position: relative;
       border-radius: 0px;
@@ -80,72 +86,72 @@
       box-shadow: none;
       margin: 20px 0;
     }
-  
+
     .bs-wizard > .bs-wizard-step > .progress > .progress-bar {
       width: 0px;
       box-shadow: none;
       background: #8E3E08;
     }
-  
+
     .bs-wizard > .bs-wizard-step.complete > .progress > .progress-bar {
       width: 100%;
     }
-  
+
     .bs-wizard > .bs-wizard-step.active > .progress > .progress-bar {
       width: 50%;
     }
-  
+
     .bs-wizard > .bs-wizard-step:first-child.active > .progress > .progress-bar {
       width: 0%;
     }
-  
+
     .bs-wizard > .bs-wizard-step:last-child.active > .progress > .progress-bar {
       width: 100%;
     }
-  
+
     .bs-wizard > .bs-wizard-step.disabled > .bs-wizard-dot {
       background-color: #f5f5f5;
     }
-  
+
     .bs-wizard > .bs-wizard-step.disabled > .bs-wizard-dot:after {
       opacity: 0;
     }
-  
+
     .bs-wizard > .bs-wizard-step:first-child > .progress {
       left: 50%;
       width: 50%;
     }
-  
+
     .bs-wizard > .bs-wizard-step:last-child > .progress {
       width: 50%;
     }
-  
+
     .bs-wizard > .bs-wizard-step.disabled a.bs-wizard-dot {
       pointer-events: none;
     }
-  
+
     @media (max-width: 1023px) {
       .hide-0-to-1024 {
         display: none;
       }
     }
-  
+
     @media (min-width: 1024px) {
       .hide-1024-up {
         display: none;
       }
     }
-  
+
     /*END Form Wizard*/
-  
+
     ul.stats-overview li {
       width: 15%;
     }
-  
+
     .disabled, .disabled:hover, .disabled:focus {
       cursor: pointer !important;
     }
- 
+
     .x_content{
         padding-left: 25%;
     }
@@ -159,13 +165,13 @@
     .modal {
       text-align: center;
     }
-    @media screen and (min-width: 768px) { 
+    @media screen and (min-width: 768px) {
       .modal:before {
         display: inline-block;
         vertical-align: middle;
         content: " ";
         height: 100%;
-      
+
       }
     }
     .modal-dialog {
@@ -228,6 +234,28 @@
     </div></center>
     <hr>
     <br/>
+
+    {% if messages %}
+      {% for message in messages %}
+      <div class="alert alert-danger" role="alert">
+          <center>{{message}}</center>
+      </div>
+      <!-- <ul class="messages">
+        {% for message in messages %}
+          <li class="success alert">{{ message }}</li>
+        {% endfor %}
+      </ul> -->
+
+      {% endfor %}
+    {% endif %}
+    <!-- {% for message in messages %}
+  <div class="alert {{ message.tags }} alert-dismissible" role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+    {{ message }}
+  </div> -->
+<!-- {% endfor %} -->
     <p class="section-description">Click the dots to display the respective menu.</p>
     <div class="x_content">
             <div class="row bs-wizard" style="border-bottom:0; margin: 0 auto; margin-top: 2vh">
@@ -262,7 +290,7 @@
                 <a class="bs-wizard-dot" data-toggle="modal" data-target="#myModal"></a>
                 </div>
 
-               
+
             </div>
     </div>
     <div>
@@ -276,7 +304,7 @@
                         </div>
                     </div>
                 </div>
-               
+
                 <div class="col-xs-2 col-md-4" >
                         <div class="card1 bg-light text-dark">
                             <div class="card-body">
